--- a/style.css
+++ b/style.css
@@ -424,11 +424,13 @@
     left: 0;
     right: 0;
     z-index: 2;
+    width: 100%;
+    overflow: hidden;
 }
 .heart{
     position: absolute;
     bottom: 0;
-    right: 10%;
+    right: auto;
 }
 .heart::before, .heart::after{
     position: absolute;
@@ -797,6 +799,27 @@ body{
         min-height: 320px;
         padding: 20px 20px 180px 20px;
     }
+    .hearts{
+        top: 70px;
+    }
+    .a1{
+        left: 15%;
+    }
+    .a2{
+        left: 50%;
+    }
+    .a3{
+        left: 5%;
+    }
+    .a4{
+        left: 65%;
+    }
+    .a5{
+        left: 35%;
+    }
+    .a6{
+        left: 75%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -844,6 +867,27 @@ body{
     }
     .decorative-line{
         width: 50px;
+    }
+    .hearts{
+        top: 60px;
+    }
+    .a1{
+        left: 10%;
+    }
+    .a2{
+        left: 45%;
+    }
+    .a3{
+        left: 3%;
+    }
+    .a4{
+        left: 60%;
+    }
+    .a5{
+        left: 30%;
+    }
+    .a6{
+        left: 70%;
     }
     .white-overlay{
         padding: 20px 15px;
